--- a/index.html
+++ b/index.html
@@ -137,12 +137,14 @@
 </nav>
 
     <div class="banner intro-2" id="background" parallax=true
-         style="background: url('/EverythingGeeks/img/default.png') no-repeat center center;
+         style="background: url('/EverythingGeeks/null') no-repeat center center;
            background-size: cover;">
       <div class="full-bg-img">
         <div class="mask flex-center" style="background-color: rgba(0, 0, 0, 0.3)">
           <div class="container page-header text-center fade-in-up">
             <span class="h2" id="subtitle">
+              
+                Everything Geeks. Let's talk about things.
               
             </span>
 
@@ -292,24 +294,6 @@ I wanted to open this blog to talk about little things on a regular basis. This 
 
 
 
-
-  <script  src="https://cdn.staticfile.org/typed.js/2.0.11/typed.min.js" ></script>
-  <script>
-    var typed = new Typed('#subtitle', {
-      strings: [
-        '  ',
-        "Everything Geeks. Let's talk about things.&nbsp;",
-      ],
-      cursorChar: "_",
-      typeSpeed: 70,
-      loop: false,
-    });
-    typed.stop();
-    $(document).ready(function () {
-      $(".typed-cursor").addClass("h2");
-      typed.start();
-    });
-  </script>
 
 
 
