deploy: 89348d1b9a522b83cc91af1faf797d760aee3b5e

--- a/about/index.html
+++ b/about/index.html
@@ -147,7 +147,7 @@
 </nav>
 
     <div class="banner intro-2" id="background" parallax=true
-         style="background: url('/EverythingGeeks/null') no-repeat center center;
+         style="background: url('/EverythingGeeks/images/background.png') no-repeat center center;
            background-size: cover;">
       <div class="full-bg-img">
         <div class="mask flex-center" style="background-color: rgba(0, 0, 0, 0.3)">
@@ -209,6 +209,7 @@
 <p>I opened this blog to talk about… stuff. I don’t have a precise idea of what this blog will be, which is why the blog’s title is pretty vague itself.</p>
 <p>Anyway, welcome aboard 🙂!</p>
 <p>Oh and, by the way, this blog is fully open-source and you can find its source code <a target="_blank" rel="noopener" href="https://github.com/ClementNerma/EverythingGeeks">on github</a> 😉</p>
+<p>Also, a huge thanks to <a target="_blank" rel="noopener" href="https://www.deviantart.com/rmradev">@rmRadev</a> for kindly allowing me to use their art for the background image of this blog &lt;3</p>
 
 </div>
 
@@ -290,6 +291,10 @@
 
 
 
+
+
+  
+<script src="/EverythingGeeks/js/fluid_custom.js"></script>
 
 
 
