--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 </nav>
 
     <div class="banner intro-2" id="background" parallax=true
-         style="background: url('/EverythingGeeks/null') no-repeat center center;
+         style="background: url('/EverythingGeeks/images/background.png') no-repeat center center;
            background-size: cover;">
       <div class="full-bg-img">
         <div class="mask flex-center" style="background-color: rgba(0, 0, 0, 0.3)">
@@ -303,6 +303,10 @@ I wanted to open this blog to talk about little things on a regular basis. This 
 
 
 
+
+
+  
+<script src="/EverythingGeeks/js/fluid_custom.js"></script>
 
 
 
